syntax/TypeParams.syntax.output
Grammar

    0 $accept: TypeParams $end

    1 TypeParams: LB RB
    2           | LB TypeParam COLON TypeClassList TypeParamList RB
    3           | LB TypeParam TypeParamList RB

    4 TypeParamList: COMMA TypeParam COLON TypeClassList TypeParamList
    5              | COMMA TypeParam TypeParamList
    6              | %empty

    7 TypeParam: UPPERID

    8 TypeClassList: TypeClass TypeClassList
    9              | %empty

   10 TypeClass: UPPERID


Terminals, with rules where they appear

$end (0) 0
error (256)
LB (258) 1 2 3
RB (259) 1 2 3
UPPERID (260) 7 10
COLON (261) 2 4
COMMA (262) 4 5


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
TypeParams (9)
    on left: 1 2 3, on right: 0
TypeParamList (10)
    on left: 4 5 6, on right: 2 3 4 5
TypeParam (11)
    on left: 7, on right: 2 3 4 5
TypeClassList (12)
    on left: 8 9, on right: 2 4 8
TypeClass (13)
    on left: 10, on right: 8


State 0

    0 $accept: . TypeParams $end

    LB  shift, and go to state 1

    TypeParams  go to state 2


State 1

    1 TypeParams: LB . RB
    2           | LB . TypeParam COLON TypeClassList TypeParamList RB
    3           | LB . TypeParam TypeParamList RB

    RB       shift, and go to state 3
    UPPERID  shift, and go to state 4

    TypeParam  go to state 5


State 2

    0 $accept: TypeParams . $end

    $end  shift, and go to state 6


State 3

    1 TypeParams: LB RB .

    $default  reduce using rule 1 (TypeParams)


State 4

    7 TypeParam: UPPERID .

    $default  reduce using rule 7 (TypeParam)


State 5

    2 TypeParams: LB TypeParam . COLON TypeClassList TypeParamList RB
    3           | LB TypeParam . TypeParamList RB

    COLON  shift, and go to state 7
    COMMA  shift, and go to state 8

    $default  reduce using rule 6 (TypeParamList)

    TypeParamList  go to state 9


State 6

    0 $accept: TypeParams $end .

    $default  accept


State 7

    2 TypeParams: LB TypeParam COLON . TypeClassList TypeParamList RB

    UPPERID  shift, and go to state 10

    $default  reduce using rule 9 (TypeClassList)

    TypeClassList  go to state 11
    TypeClass      go to state 12


State 8

    4 TypeParamList: COMMA . TypeParam COLON TypeClassList TypeParamList
    5              | COMMA . TypeParam TypeParamList

    UPPERID  shift, and go to state 4

    TypeParam  go to state 13


State 9

    3 TypeParams: LB TypeParam TypeParamList . RB

    RB  shift, and go to state 14


State 10

   10 TypeClass: UPPERID .

    $default  reduce using rule 10 (TypeClass)


State 11

    2 TypeParams: LB TypeParam COLON TypeClassList . TypeParamList RB

    COMMA  shift, and go to state 8

    $default  reduce using rule 6 (TypeParamList)

    TypeParamList  go to state 15


State 12

    8 TypeClassList: TypeClass . TypeClassList

    UPPERID  shift, and go to state 10

    $default  reduce using rule 9 (TypeClassList)

    TypeClassList  go to state 16
    TypeClass      go to state 12


State 13

    4 TypeParamList: COMMA TypeParam . COLON TypeClassList TypeParamList
    5              | COMMA TypeParam . TypeParamList

    COLON  shift, and go to state 17
    COMMA  shift, and go to state 8

    $default  reduce using rule 6 (TypeParamList)

    TypeParamList  go to state 18


State 14

    3 TypeParams: LB TypeParam TypeParamList RB .

    $default  reduce using rule 3 (TypeParams)


State 15

    2 TypeParams: LB TypeParam COLON TypeClassList TypeParamList . RB

    RB  shift, and go to state 19


State 16

    8 TypeClassList: TypeClass TypeClassList .

    $default  reduce using rule 8 (TypeClassList)


State 17

    4 TypeParamList: COMMA TypeParam COLON . TypeClassList TypeParamList

    UPPERID  shift, and go to state 10

    $default  reduce using rule 9 (TypeClassList)

    TypeClassList  go to state 20
    TypeClass      go to state 12


State 18

    5 TypeParamList: COMMA TypeParam TypeParamList .

    $default  reduce using rule 5 (TypeParamList)


State 19

    2 TypeParams: LB TypeParam COLON TypeClassList TypeParamList RB .

    $default  reduce using rule 2 (TypeParams)


State 20

    4 TypeParamList: COMMA TypeParam COLON TypeClassList . TypeParamList

    COMMA  shift, and go to state 8

    $default  reduce using rule 6 (TypeParamList)

    TypeParamList  go to state 21


State 21

    4 TypeParamList: COMMA TypeParam COLON TypeClassList TypeParamList .

    $default  reduce using rule 4 (TypeParamList)
